style.css
/* ... */
address {
    line-height: 1.5;
    margin: 0 0 2rem 0;
}

hr {
    border-style: solid;
    border-width: 0.1rem 0 0 0;
    border-color: #dcd7ca;
    margin: 4rem 0;
}

.entry-content hr,
hr.styled-separator {
    background: linear-gradient(
            to left,
            currentColor calc(50% - 16px),
            transparent calc(50% - 16px),
            transparent calc(50% + 16px),
            currentColor calc(50% + 16px)
    );
    background-color: transparent !important;
    border: none;
    height: 0.1rem;
    overflow: visible;
    position: relative;
}

.entry-content hr:not(.has-background),
hr.styled-separator {
    color: #6d6d6d;
}

.entry-content hr::before,
.entry-content hr::after,
hr.styled-separator::before,
hr.styled-separator::after {
    background: currentColor;
    content: "";
    display: block;
    height: 1.6rem;
    position: absolute;
    top: calc(50% - 0.8rem);
    transform: rotate(22.5deg);
    width: 0.1rem;
}

.entry-content hr::before,
hr.styled-separator::before {
    left: calc(50% - 0.5rem);
}

.entry-content hr::after,
hr.styled-separator::after {
    right: calc(50% - 0.5rem);
}

a {
    color: #cd2653;
    text-decoration: underline;
}

a:hover,
a:focus {
    text-decoration: none;
}

.menu a[aria-current="page"] {
    font-weight: bold;
}

.menu li {
    /* height: 24px; */
    cursor: pointer;
    /* margin-bottom: 8px; */
    /* margin-right: 10px; */
    padding: 7px;
    padding-left: 30px;
    position: relative;
}

/* Lists ------------------------------------- */

ul,
ol {
    margin: 0 0 3rem 3rem;
}

ul {
    list-style: disc;
}

ul ul {
    list-style: circle;
}

ul ul ul {
    list-style: square;
}

ol {
    list-style: decimal;
}

ol ol {
    list-style: lower-alpha;
}

ol ol ol {
    list-style: lower-roman;
}

li {
    line-height: 1.5;
    margin: 0.5rem 0 0 2rem;
}

li > ul,
li > ol {
    margin: 1rem 0 0 2rem;
}

.reset-list-style,
.reset-list-style ul,
.reset-list-style ol {
    list-style: none;
    margin: 0;
}

.reset-list-style li {
    margin: 0;
}

dt,
dd {
    line-height: 1.5;
}

dt {
    font-weight: 700;
}

dt + dd {
    margin-top: 0.5rem;
}

dd + dt {
    margin-top: 1.5rem;
}

/* Quotes ------------------------------------ */

blockquote {
    border-color: #cd2653;
    border-style: solid;

    /*rtl:ignore*/
    border-width: 0 0 0 0.2rem;
    color: inherit;
    font-size: 1em;
    margin: 4rem 0;

    /*rtl:ignore*/
    padding: 0.5rem 0 0.5rem 2rem;
}

cite {
    color: #6d6d6d;
    font-size: 1.4rem;
    font-style: normal;
    font-weight: 600;
    line-height: 1.25;
}

blockquote cite {
    display: block;
    margin: 2rem 0 0 0;
}

blockquote p:last-child {
    margin: 0;
}

/* Code -------------------------------------- */

code,
kbd,
pre,
samp {
    font-family: monospace;
    font-size: 0.9em;
    padding: 0.4rem 0.6rem;
}

code,
kbd,
samp {
    background: rgba(0, 0, 0, 0.075);
    border-radius: 0.2rem;
}

pre {
    border: 0.1rem solid #dcd7ca;
    line-height: 1.5;
    margin: 4rem 0;
    overflow: auto;
    padding: 3rem 2rem;
    text-align: left;
}

pre code {
    background: transparent;
    padding: 0;
}

/* Media ------------------------------------- */

figure {
    display: block;
    margin: 0;
}

iframe {
    display: block;
    max-width: 100%;
}

video {
    display: block;
}

figcaption,
.wp-caption-text {
    color: #6d6d6d;
    display: block;
    font-size: 1.5rem;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 1.5rem;
}

figcaption a,
.wp-caption-text a {
    color: inherit;
}

blockquote.instagram-media,
iframe.instagram-media {
    margin: auto !important;
}

/* Base Transitions -------------------------- */

a,
path {
    transition: all 0.15s linear;
    /* width: 100%; */
    color: #9d9283;
}

li,
ul {
    transition: all 0.15s linear;
    /* width: 100%; */
}

.entry-content {
    line-height: 1.5;
    padding-bottom: 80px;
    padding: 0 16px;
}


.entry-content > *:first-child {
    margin-top: 0;
}

.entry-content > *:last-child {
    margin-bottom: 30px !important;
}

.read-more-button-wrap {
    margin-top: 1em;
    text-align: center;
}

.entry-content a:hover,
.entry-content a:focus {
    text-decoration: underline;
}

.entry-content p,
.entry-content li {
    line-height: 1.4;
}

.entry-content h1,
.entry-content h2,
.entry-content h3,
.entry-content h4,
.entry-content h5 {
    margin: 3.5rem auto 2rem;
}

.entry-content ul ul,
.entry-content ol ol,
.entry-content ul ol,
.entry-content ol ul {
    margin-bottom: 1rem;
}

.entry-content hr {
    margin: 4rem auto;
}

/* Font Families ----------------------------- */

.entry-content p,
.entry-content ol,
.entry-content ul,
.entry-content dl,
.entry-content dt {
    font-family: 'Merriweather', serif;
    font-size: 17px;
    letter-spacing: normal;
}

.entry-content cite,
.entry-content figcaption,
.entry-content .wp-caption-text {
    font-family: merriweather, "open-sans", sans-serif;
}

@supports (font-variation-settings: normal) {
    .entry-content cite,
    .entry-content figcaption,
    .entry-content .wp-caption-text {
        font-family: merriweather, "open-sans", sans-serif;
    }
}

/* Alignment Classes ------------------------- */

.entry-content
> *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
    max-width: 800px;
    /* width: calc(100% - 4rem);*/
}

[class*="__inner-container"]
> *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright):not(.is-style-wide) {
    max-width: 800px;
    width: 100%;
}

.alignnone,
.aligncenter,
.alignleft,
.alignright,
.alignwide {
    margin-top: 4rem;
    margin-right: auto;
    margin-bottom: 4rem;
}

[class*="__inner-container"]
> *:not(.alignwide):not(.alignfull):not(.alignleft):not(.alignright) {
    margin-left: auto;
    margin-right: auto;
}
/* ... */

